# rp-dbt-rw-fraud-monitor

./: .env.example  .gitignore  .pre-commit-config.yaml  .sqlfluff  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  capture_dashboard.py  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: add-producer-event.md  explain-view.md  fraud-scenario-test.md  lint.md  new-fraud-pattern.md  pipeline-status.md  risk-score-audit.md  test.md  validate-sql.md
.claude/hooks/: post-edit.sh  pre-bash.sh
.github/workflows/: ci.yml
docs/: architecture.md  components.md  data_flow.md  data_model.md  fraud_patterns.md  regulatory_context.md  runbook.md  troubleshooting.md
fraud_detection/: README.md  dbt_project.yml  profiles.yml
fraud_detection/models/case_management/: case_management.yml  mv_open_fraud_cases.sql  mv_recent_high_alerts.sql  mv_resolved_cases_today.sql  schema.yml
fraud_detection/models/fraud_signals/: fraud_signals.yml  mv_cnp_spike.sql  mv_correlated_alert_burst.sql  mv_device_anomalies.sql  mv_geo_impossible_trips.sql  mv_known_customer_devices.sql  mv_login_failure_storm.sql  mv_network_analysis.sql  mv_structuring_detection.sql  mv_velocity_alerts.sql  schema.yml
fraud_detection/models/risk_aggregations/: mv_account_risk_score_realtime.sql  mv_channel_risk_breakdown.sql  mv_fraud_kpis_1min.sql  mv_hourly_fraud_trend.sql  mv_merchant_fraud_exposure.sql  risk_aggregations.yml  schema.yml
fraud_detection/models/sources/: alert_events.sql  card_events.sql  kyc_profile_events.sql  login_events.sql  schema.yml  sources.yml  transactions.sql
fraud_detection/models/staging/: mv_latest_kyc.sql  mv_latest_kyc.yml  schema.yml  stg_alert_events.sql  stg_alert_events.yml  stg_card_events.sql  stg_card_events.yml  (+6 more)
grafana/dashboards/: fraud_live_ops.json  fraud_ops_centre.json
producers/: Dockerfile  config.py  main.py  models.py  pyproject.toml  requirements.txt
producers/generators/: alert.py  card.py  customer_pool.py  kyc_profile.py  login.py  transaction.py
producers/tests/: test_alert_generator.py  test_customer_pool.py  test_kyc_generator.py  test_login_generator.py  test_minute_tick.py  test_models.py  test_schema_contracts.py  test_transaction_generator.py
scripts/: check_pipeline.sh  ci_sql_checks.py  init_sql.sh  redpanda-console-config.yaml  run_data_quality_checks.sh
sql/: 01_sources.sql  02_staging.sql  03_fraud_signals.sql  04_risk_aggregations.sql  05_case_management.sql  99_data_quality_checks.sql
(+2 files in other folders)
