[project]
name = "fraud-detection-streaming"
version = "0.1.0"
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["producers"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "TID", # flake8-tidy-imports
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",
    "SIM108",
    "UP017",  # keep timezone.utc for Python 3.10 compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["generators", "models", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["producers/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
