[project]
name = "fraud-detection-producer"
version = "0.1.0"
description = "Synthetic event producer for the fraud-detection-streaming pipeline"
requires-python = ">=3.11"
dependencies = [
    "faker>=24.11.0",
    "kafka-python>=2.0.2",
    "pydantic>=2.7.1",
    "geopy>=2.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.4",
    "pre-commit>=3.7.1",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["."]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "TID", # flake8-tidy-imports
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",   # line too long — handled by formatter
    "B008",   # function calls in default args
    "SIM108", # ternary operator (readability preference)
    "UP017",  # keep timezone.utc for Python 3.10 compatibility
]

[tool.ruff.lint.isort]
known-first-party = ["generators", "models", "config"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
